# pydantic-yaml

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  env-v1.yml  environment.yml  foo.py  mkdocs.yml  pyproject.toml  setup.cfg  setup.py  tmp.json  tmp.py  tmp_comment_examples.py
.github/: dependabot.yml
.github/workflows/: ci-cd.yml  ci-single.yml  ci-v2-dev.yml  python-publish.yml  python-testing.yml  test-matrix.yml
docs/: comments.md  index.md  installing.md  versioned.md
pydantic_yaml/: __init__.py  _inject_representers.py  _semver.py  _yaml.py  aux_types.py  enums.py  main.py  mixin.py  model.py  models.py  versioned_models.py
pydantic_yaml/compat/: hacks.py  old_enums.py  representers.py  types.py  yaml_lib.py
pydantic_yaml/ext/: __init__.py  bad_include.py  include.py  semver.py  versioned_model.py
pydantic_yaml/test/: __init__.py  test_advanced_yaml.py  test_basic.py  test_file_comments.py  test_io.py  test_resursive.py  test_secret_types.py  test_sorting.py  test_types.py  test_versioned.py  versioned.yaml
src/pydantic_yaml/: __init__.py  _config.py  dumper.py  loader.py  main.py  mixin.py  model.py  version.py
src/pydantic_yaml/_internals/: comments.py  pydantic_v2.py  v1.py  v2.py
src/pydantic_yaml/api/: __init__.py  editor.py  reader.py  writer.py
src/pydantic_yaml/compat/: __init__.py  hacks.py  old_enums.py  types.py  yaml_lib.py
src/pydantic_yaml/deprecated/: types.py
src/pydantic_yaml/examples/: __init__.py  base_models.py  common.py  customized_yaml.py  models.py
src/pydantic_yaml/examples/base_models/: a-1.2.yaml  a.yaml  b.yaml  recursive.yaml  root_list_obj.yaml  root_list_str.yaml  uses_refs.yaml
src/pydantic_yaml/examples/commented/false/: commented_model.yaml  uses_refs.yaml
src/pydantic_yaml/examples/commented/fields/: commented_model.yaml  uses_refs.yaml
src/pydantic_yaml/examples/commented/models/: commented_model.yaml  uses_refs.yaml
src/pydantic_yaml/examples/commented/true/: commented_model.yaml  uses_refs.yaml
src/pydantic_yaml/examples/data/: a-1.1.yaml  has_enums.yaml
src/pydantic_yaml/examples/v1/: __init__.py  base_models.py
src/pydantic_yaml/examples/v2/: __init__.py  base_models.py
src/pydantic_yaml/ext/: versioned_model.py
src/pydantic_yaml/test/: test_basic.py  test_io.py  test_resursive.py  test_types.py
src/test/: conftest.py  helper.py  test_basic.py  test_comment_writing.py  test_dump_custom.py  test_failures.py  test_import.py  test_non_class_types.py  test_readme.py  test_v2_dataclass.py  test_v2_v1_compat.py
