[build-system]
requires = ["hatchling>=1.29.0", "hatch-vcs>=0.5.0"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"


[project.urls]
github = "https://github.com/NowanIlfideme/pydantic-yaml"
docs = "https://pydantic-yaml.readthedocs.io/en/latest/"
issues = "https://github.com/NowanIlfideme/pydantic-yaml/issues"
releasenotes = "https://github.com/NowanIlfideme/pydantic-yaml/releases"

[project]
name = "pydantic_yaml"
# version is dynamic
description = "YAML reading/writing for Pydantic models"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dynamic = ["version"]
keywords = ["pydantic", "yaml"]
license = { file = "LICENSE" }
authors = [{ name = "NowanIlfideme", email = "git@nowan.dev" }]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic>=1.8,<3",            # including pydantic>=2.0.0!
    "ruamel.yaml>=0.17.0,<0.19.0", # recommended ~=0.18.x
    "typing_extensions>=4.5.0",
]

[dependency-groups]
dev = [
    "pre-commit==4.5.1",
    "ruff==0.15.6",
    "mypy==1.19.1",
    "pytest==9.0.2",
    "hatchling>=1.29.0",
    "hatch-vcs>=0.5.0",
]
docs = [
    "mkdocs<2",             # To be updated to Zensical
    "mkdocs-material",
    "mkdocstrings[python]",
    "pymdown-extensions",
    "pygments",
]

[project.scripts]


[tool.uv]
default-groups = ["dev", "docs"]
cache-keys = [
    { file = "pyproject.toml" },
    { git = { commit = true, tags = true } },
]

[tool.setuptools]
zip-safe = false
package-dir = { "" = "src" }
packages = ["pydantic_yaml"]

# [tool.setuptools.package-data]

# [tool.setuptools.dynamic]
# version = { attr = "pydantic_yaml.version.__version__" }


[tool.ruff]
# NOTE: target-version is same as requires-python
# See: https://astral.sh/blog/ruff-v0.10.0
line-length = 105
src = ["src"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # pyflakes
    "UP", # pyupgrade
    "D",  # pydocstyle
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
testpaths = ["src/test"]
# filterwarnings = ["error"]  # TODO: Consider enabling to avoid warnings.

[tool.mypy]
files = 'src/pydantic_yaml/**/*.py'
warn_unused_configs = true

[[tool.mypy.overrides]]
module = 'ruamel.*'
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = 'setuptools_scm.*'
ignore_missing_imports = true
