[bumpversion]
current_version = 0.6.0
commit = False
tag = False
files = ./pydantic_yaml/version.py
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\-(?P<release>[a-z]+)(?P<n>\d+))?
serialize = 
	{major}.{minor}.{patch}

[metadata]
name = pydantic_yaml
version = attr: pydantic_yaml.version.__version__
description = "Adds some YAML functionality to the excellent `pydantic` library."
url = https://github.com/NowanIlfideme/pydantic-yaml
project_urls = 
	docs = https://pydantic-yaml.readthedocs.io/en/latest/
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
	Development Status :: 5 - Production/Stable
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Intended Audience :: Developers
	Intended Audience :: Information Technology
	Intended Audience :: System Administrators
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Topic :: Software Development :: Libraries :: Python Modules
author = Anatoly Makarevich
author_email = git@nowan.dev
license = MIT

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.7
packages = find_namespace:
install_requires = 
	pydantic>=1.7.4,<2.0
	semver>=2.13.0,>=3.0.0.dev2  # 2 or 3 should both work
	deprecated~=1.2.5
	types-Deprecated
test_require = 
	pytest
	mypy

[options.package_data]
* = *.yaml, *.yml, py.typed

[options.extras_require]
pyyaml = 
	pyyaml
	types-PyYAML
ruamel = ruamel.yaml>=0.15,<0.18  # new API starting from 0.15, but old is still available
dev = 
	black
	flake8
	bump2version
	pytest
	mypy
docs = 
	mkdocs
	mkdocs-material
	mkdocstrings
	pymdown-extensions
	pygments
